--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+/* 
+    File: theme-dark.css
+    Author: Owen Rasor
+    Description: Dark theme override for portfolio site
+    Changes:
+      - Dark background, light text
+      - Muted colors
+      - New font family
+*/
+
 body, h1, h2, p, ul {
     margin: 0;
     padding: 0;
@@ -16,7 +26,7 @@ header {
     grid-template-columns: 1fr auto;
     align-items: end;
     height: 300px;
-    background: url('banner.jpeg') no-repeat center center/cover;
+    background: url('../img/banner.jpeg') no-repeat center center/cover;
     padding: 0 20px;
     color: white;
 }
@@ -26,6 +36,7 @@ header h1 {
     font-size: 70px;
     border-radius: 10px;
     margin-left: 5%;
+    padding-right: 50px;
     display: inline-block;
 }
 
@@ -35,7 +46,7 @@ nav {
 
 nav a {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
     margin: 10px;
     padding: 10px;
@@ -51,6 +62,22 @@ a:hover {
     gap: 20px;
     list-style: none;
     
+}
+
+#toggle-theme {
+    background-color: white;
+    color: black;
+    border: none;
+    padding: 10px 16px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#toggle-theme:hover {
+    background-color: black;
+    color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 main {
@@ -147,7 +174,7 @@ footer a:hover {
     padding: 5px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 951px) {
     header {
         height: 200px;
     }
